Closed
Bug 382081
Opened 18 years ago
Closed 18 years ago
Small downloads don't show in download manager when already open
Categories
(Toolkit :: Downloads API, defect)
Toolkit
Downloads API
Tracking
()
VERIFIED
FIXED
People
(Reporter: mwu, Assigned: sdwilsh)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.93 KB,
patch
|
mconnor
:
review+
|
Details | Diff | Splinter Review |
If a new download is started with the download manager open, it doesn't always show up in the download manager.
To reproduce:
1. open downloads manager
2. clear existing downloads
3. attempt to download a small file
The new download doesn't show in the downloads manager.
| Assignee | ||
Comment 1•18 years ago
|
||
I'm pretty sure I know how to fix it. This is all because we cannot use templates :(
Assignee: nobody → sdwilsh
| Assignee | ||
Comment 2•18 years ago
|
||
Basically, the template took care of this before. Small files complete before the update interval, so they never got flagged as started. Part of this is because I moved the dl-start notification there, but it needs to stay there. The best part is that the unit tests verify that this doesn't break anything ;)
Anyway, this is one additional check each time this function is called, but it's just comparing too PRInt16s, so it's quick. Too bad we have to do it though :(
Attachment #266168 -
Flags: review?(mconnor)
| Assignee | ||
Comment 3•18 years ago
|
||
Regardless of this working with or without the templates, it's still a bug. I probably should add a test case as well.
Status: NEW → ASSIGNED
Flags: blocking-firefox3?
| Assignee | ||
Updated•18 years ago
|
Summary: New downloads don't show in download manager when already open → Small downloads don't show in download manager when already open
Updated•18 years ago
|
Attachment #266168 -
Flags: review?(mconnor) → review+
| Assignee | ||
Comment 4•18 years ago
|
||
Checking in toolkit/components/downloads/src/nsDownloadManager.cpp;
new revision: 1.84; previous revision: 1.83
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Updated•18 years ago
|
Flags: in-litmus?
Comment 5•18 years ago
|
||
Flags: in-litmus? → in-litmus+
Comment 6•18 years ago
|
||
Verified FIXED using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a8pre) Gecko/2007081705 Minefield/3.0a8pre
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•