Bug 382081 - Small downloads don't show in download manager when already open.  r=mconnor